# API-tools

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  tall ruff mypy  test.sh
.github/: CODEOWNERS
.github/workflows/: cd.yml  main.yml
api/: accent_marker.py  auth.py  dependencies.py  dict_query.py  furigana_marker.py  reading_overrides.py  sentence_query.py  usage_query.py
api/accent/: README.md  __init__.py  align.py  furigana.py  models.py  ojad.py  pipeline.py  postprocess.py  preprocess.py  reading_overrides.py  routes.py  tokenizer.py  user_patches.py
auth/: README.md  client_auth.py  generate_keys.py
config/: furigana_overrides.py  settings.py
docs/: spike-local-unidic-runbook.md  spike-local-unidic.md
scripts/: download_unidic.sh  probe_te_and_long.py  probe_verb_forms.py  run_10_tests.sh  smoke_test_partial.py  spike_local_unidic.py
