[project]
name = "api-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "jaconv>=0.4.0",
    "neologdn>=0.5.4",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]



[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "N"]

[tool.mypy]
strict = true
namespace_packages = true
warn_unused_ignores = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]
